@@ -1222,17 +1222,20 @@ typedef struct __cob_symbol {
 	unsigned int	parent;		/* Index to parent cob_symbol */
 	unsigned int	sister;		/* Index to sister cob_symbol */
 	char			*name;		/* Field name, NULL means FILLER */
-	void			*data;		/* Pointer to data pointer */
+	void			*adrs;		/* Pointer to data pointer */
 	const cob_field_attr *attr;	/* Pointer to attribute */
 
 	unsigned int	is_file:1;	/* 'data' points to FILE pointer */
-	unsigned int	is_indirect:1;/* 'data' points to the field's pointer */
+	unsigned int	is_indirect:2;/* 'data' points to the field's pointer */
+#define SYM_ADRS_DATA	0		/* 'adrs' is direct address of field data */
+#define SYM_ADRS_PTR	1		/* 'adrs' is address of address of field data */
+#define SYM_ADRS_FIELD	2		/* 'adrs' is address of complete cob_field */
 	unsigned int	level:7;	/* Level number */
 	unsigned int	section:3;	/* SECTION of program */
 	unsigned int	is_group:1;	/* Field was Group item */
 	unsigned int	is_redef:1;	/* Field has REDEFINES */
 	unsigned int	has_depend:1;/* Field has DEPENDING ON */
-	unsigned int	indexes:5;	/* Field has N subscripts/indexes */
+	unsigned int	subscripts:5;/* Field requires N subscripts */
 
 	unsigned int	offset;		/* Offset within record */
 	unsigned int	size;		/* Field size */
